<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abba9ja.modo.AppSuggestions">



    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent1"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.545"
        android:id="@+id/frameLayout">


        <Button
            android:id="@+id/btnSubmit"
            android:background="@drawable/yel_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </FrameLayout>`

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/popular_topics"/>

            <CheckBox
                android:id="@+id/loadinSlow"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/loading_slowly"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:background="@color/colorPrimary1" />

            <CheckBox
                android:id="@+id/needMore"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/need_more_categories"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:background="@color/colorPrimary1" />

            <CheckBox
                android:id="@+id/prblmShare"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="368dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/problem_sharing"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:background="@color/colorPrimary1" />

            <CheckBox
                android:id="@+id/appshutdown"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_shuting_down"
                android:textSize="15sp" />



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:background="@color/colorPrimary1" />

            <EditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/additional_subject"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/description_required"
                    android:textColorHint="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
