<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PostActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:id="@+id/imageRecycler"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_height="320dp"/>

            <TextView
                android:id="@+id/tvIndicator"
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_on_the_add_picture_icon"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:drawableTop="@drawable/ic_ic_add_indicator"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/iilPostTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageRecycler"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLength="30"
                    android:id="@+id/etPostTitle"
                    android:hint="@string/post_title"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/iilPostDecs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iilPostTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLength="300"
                    android:id="@+id/etPostDesc"
                    android:hint="@string/post_description"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10"
                    android:layout_weight="1"
                    android:id="@+id/item_price"
                    android:hint="Tag ₦: Price if for sale"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/item_price"
                    android:text="Negotiable"
                    android:layout_weight="1"
                    android:id="@+id/chk_negoitable"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark1"
            android:text="@string/submit_post"
            android:textColor="@android:color/white" />
    </RelativeLayout>
