<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/emailmc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".SignedIn">

    <FrameLayout
        android:id="@+id/fmbg"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/shape_down_rect"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </FrameLayout>


    <ImageView
        android:id="@+id/siIvProfilePic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="50dp"
        android:baselineAlignBottom="true"
        android:minHeight="80dp"
        android:minWidth="80dp"
        android:src="@android:drawable/picture_frame"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fmbg"
        app:layout_constraintVertical_bias="0.176" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/top_right_rectangle"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.973"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/profile_details"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <TextView
                        android:id="@+id/sitvnamelbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:text="@string/namelbl"/>

                    <TextView
                        android:id="@+id/si_name_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/sitvnamelbl"
                        android:layout_toRightOf="@id/sitvnamelbl"
                        android:layout_alignBaseline="@id/sitvnamelbl"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="end"
                        tools:text="Full User Name"/>
                </RelativeLayout>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <TextView
                        android:id="@+id/sitvemaillbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:text="@string/email"/>

                    <TextView
                        android:id="@+id/si_email_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/sitvemaillbl"
                        android:layout_toRightOf="@id/sitvemaillbl"
                        android:layout_alignBaseline="@id/sitvemaillbl"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="end"
                        tools:text="example@mail.com"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <TextView
                        android:id="@+id/sitvnumberillbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:text="@string/provider"/>

                    <TextView
                        android:id="@+id/si_number_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/sitvnumberillbl"
                        android:layout_toRightOf="@id/sitvnumberillbl"
                        android:layout_alignBaseline="@id/sitvnumberillbl"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="end"
                        tools:text=""/>
                </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
